minor change
편집 상세정보에 표지 업로드 추가 해야할듯